(chores) use List.of which is simpler and more efficient for single objects